--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     ]
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.170"
+    "@types/lodash": "^4.14.170",
+    "@types/readable-stream": "^2.3.10"
   }
 }
